Update index file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alexa-lunch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
