Update start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
+    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,9 @@
     "mysql": "^2.16.0",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
+  },
+  "engines": {
+    "node": "=8.11.3",
+    "npm": "=5.6.0"
   }
 }
