--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
+    "request": "^2.87.0",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   },
